[package]
name = "pillable-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.7", features = ["postgres", "uuid", "runtime-tokio-native-tls"] }
dotenv = "0.15"
uuid = { version = "1.4", features = ["v4", "serde"] }
